/*
 * $Id: ChangeLog,v 1.2090 2004/01/17 22:42:57 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-01-18 06:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! type castings

2004-01-17 23:39 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    * WVT_SETCLIPBOARD - Fixed lenght of string stored in clipboard

2004-01-18 05:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    ! type castings

  * source/rtl/tget.prg
    ! .. get x pic "9x9x" not working. Fixed.

  + source/rtl/gtcgi/cgiread.c
    ! PRG level functions for CGIREAD() and CGIWRITE() to fix certain CGI
      problems for Win32 - there seems to be no stdin binary reads so
      while trying to upload a binary file through a CGI webform, you get
      broken file and even when sending text data you get wrong bytecount
      due to \r\n -> \n translation (ANY Win32 C compiler treats stdin/stdout
      as having "terminal" flag).
      Credits to: "Dmitry V. Korzhov" <dk@april26.spb.ru>

2004-01-17 22:50 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    + Added clipboard functions
      WVT_GETCLIPBOARD, WVT_SETCLIPBOARD, WVT_PASTEFROMCLIPBOARD
  + tests/wvt.prg
    + Added clipboard prg related functions
      WVT_PasteFromClipboard(), WVT_CopyToClipboard()
  + tests/wvtguie.prg
    * Added keys for clipboard

  /*
    Now we can use clipboard!
    Actually it is a simple method:
    assign
    SetKey( K_CTRL_C, {|| WVT_CopyToClipboard() } )
    SetKey( K_CTRL_V, {|| WVT_PasteFromClipboard() } )

    then a simple idea, when copy to clipboard I copy the entire
    oGet:buffer, instead when paste I send the clipboard to
    keyboard buffer but only if there is an active Get