@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2090 2004/01/17 22:42:57 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.2091 2004/01/17 23:20:03 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-17 22:35 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/pp/ppcore.c
+  * source/common/hbver.c
+    * correct hb_ppPlatform() and hb_verPlatform() for consistancy
+  * tests/pp.prg
+    made Func Version() static
+
 2004-01-18 06:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/gtwvt/gtwvt.c
     ! type castings
